# models/cartItem.js
@@ -1,6 +1,6 @@
 const mongoose = require("mongoose");
 
-const Cart_itemSchema = new mongoose.Schema({
+const cartItemSchema = new mongoose.Schema({
   cartId: {
     type: String,
     required: true,
@@ -20,6 +20,15 @@ const Cart_itemSchema = new mongoose.Schema({
   offerDiscount: {
     type: Number,
   },
+  shippingTypeId: {
+    type: String,
+  }, 
+  shippingDate: {
+    type: Date
+  }, 
+  shippingCost: {
+    type: Number
+  }
 });
 
-module.exports = mongoose.model("Cart-item", Cart_itemSchema);
+module.exports = mongoose.model("Cart-item", cartItemSchema);
