# models/orderItem.js
@@ -1,11 +1,11 @@
-const mongoose = require('mongoose')
+const mongoose = require("mongoose");
 
-const Order_itemSchema = new mongoose.Schema({
-    orderID: {
+const OrderItemSchema = new mongoose.Schema({
+  orderId: {
     type: String,
     required: true,
   },
-  productID: {
+  productId: {
     type: String,
     required: true,
   },
@@ -17,13 +17,13 @@ const Order_itemSchema = new mongoose.Schema({
     type: String,
     required: true,
   },
-  offeraDiscount: {
+  offerDiscount: {
     type: String,
   },
   shippingCost: {
     type: String,
     required: true,
   },
-})
+});
 
-module.exports = mongoose.model('Order_item', Order_itemSchema)
+module.exports = mongoose.model("Order-item", OrderItemSchema);
