# swagger.json
@@ -266,15 +266,6 @@
             "schema": {
               "type": "object",
               "properties": {
-                "userId": {
-                  "type": "string"
-                },
-                "dateCreated": {
-                  "type": "string"
-                },
-                "lastDateModified": {
-                  "type": "string"
-                },
                 "subtotal": {
                   "type": "number"
                 },
@@ -289,8 +280,11 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "201": {
+            "description": "Created"
+          },
+          "204": {
+            "description": "Updated"
           },
           "400": {
             "description": "Bad Request"
@@ -301,7 +295,7 @@
         }
       },
       "delete": {
-        "description": "Delete the current session cart information",
+        "description": "Find the Cart Item by Id and delete the record from database",
         "parameters": [],
         "responses": {
           "200": {
@@ -313,10 +307,17 @@
         }
       }
     },
-    "/cart/item/": {
+    "/cart/{cartId}/item/": {
       "get": {
         "description": "List all cart items stored in the current session cart",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "cartId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -330,14 +331,17 @@
         "description": "Create new Cart Item for the current session cart",
         "parameters": [
           {
+            "name": "cartId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
             "name": "body",
             "in": "body",
             "schema": {
               "type": "object",
               "properties": {
-                "cartId": {
-                  "type": "string"
-                },
                 "productId": {
                   "type": "string"
                 },
@@ -367,7 +371,7 @@
         }
       }
     },
-    "/cart/item/{cartitemId}": {
+    "/cart/{cartId}/item/{cartitemId}": {
       "get": {
         "description": "Retrieve details of the cart item selected",
         "parameters": [
@@ -394,6 +398,12 @@
         "description": "Find Cart Item by Id and then update the information",
         "parameters": [
           {
+            "name": "cartId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
             "name": "cartitemId",
             "in": "path",
             "required": true,
@@ -405,6 +415,9 @@
             "schema": {
               "type": "object",
               "properties": {
+                "productId": {
+                  "type": "string"
+                },
                 "quantity": {
                   "type": "integer"
                 },
@@ -434,6 +447,12 @@
         "description": "Find the Cart Item by Id and delete the record from database",
         "parameters": [
           {
+            "name": "cartId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
             "name": "cartitemId",
             "in": "path",
             "required": true,
@@ -443,48 +462,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/cart/item/{cartitemId}/shipping/": {
-      "put": {
-        "description": "Create new Streaming event",
-        "parameters": [
-          {
-            "name": "cartitemId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "shippingTypeId": {
-                  "type": "string"
-                },
-                "shippingDate": {
-                  "type": "string"
-                },
-                "shippingCost": {
-                  "type": "number"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "Updated Shipping Cart Item"
-          },
-          "400": {
-            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
